Derive tenant scope only from TenantContext
Stop passing companyId through the service layer while keeping the current HTTP contract intact. Controllers still accept companyId in params and payloads for compatibility, but tenant-scoped services now read the tenant exclusively from TenantContext.

Also centralize the write-side tenant guard in CurrentTenant.requireCurrentTenant(), remove resolveTenant(), tighten scheduling and employee access to avoid unscoped fallbacks, and update controller/service tests to validate the new tenant-boundary behavior.