@@ -1,13 +1,13 @@
 package com.w2w.api.positiongroup;
 
-import com.w2w.api.position.dto.PositionSummary;
+import com.w2w.api.config.TenantContext;
 import com.w2w.api.position.model.Position;
 import com.w2w.api.position.repository.PositionRepository;
-import com.w2w.api.positiongroup.dto.CreatePositionGroupRequest;
 import com.w2w.api.positiongroup.dto.PositionGroupSummary;
 import com.w2w.api.positiongroup.dto.UpdatePositionGroupRequest;
 import com.w2w.api.positiongroup.model.PositionGroup;
 import com.w2w.api.positiongroup.repository.PositionGroupRepository;
+import org.junit.jupiter.api.AfterEach;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -15,16 +15,23 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.*;
+import java.util.List;
+import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
-import static org.mockito.Mockito.*;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
+import static org.mockito.Mockito.when;
 
 @ExtendWith(MockitoExtension.class)
-public class PositionGroupServiceTest {
+class PositionGroupServiceTest {
 
     @Mock
     private PositionGroupRepository positionGroupRepository;
@@ -35,122 +42,119 @@ public class PositionGroupServiceTest {
     @InjectMocks
     private PositionGroupService positionGroupService;
 
-    private Integer companyId;
     private Position position;
-    private PositionGroup group;
+    private PositionGroup positionGroup;
 
     @BeforeEach
     void setUp() {
-        companyId = 1;
+        TenantContext.setCurrentTenant(1);
 
         position = new Position();
         position.setPositionId(101);
-        position.setCompanyId(companyId);
+        position.setCompanyId(1);
         position.setDescription("Server");
 
-        group = new PositionGroup();
-        group.setGroupId(1);
-        group.setCompanyId(companyId);
-        group.setDescription("Core Staff");
-        group.setPositions(Collections.singletonList(position));
+        positionGroup = new PositionGroup();
+        positionGroup.setGroupId(201);
+        positionGroup.setCompanyId(1);
+        positionGroup.setDescription("Front of House");
+        positionGroup.setPositions(List.of(position));
+        positionGroup.setIsDeleted(false);
+    }
+
+    @AfterEach
+    void clearTenantContext() {
+        TenantContext.clear();
     }
 
     @Test
-    void getPositionGroups_ReturnsSummaries() {
-        when(positionGroupRepository.findByCompanyId(companyId))
-                .thenReturn(Collections.singletonList(group));
+    void getPositionGroups_returnsMappedGroups() {
+        when(positionGroupRepository.findByCompanyId(1)).thenReturn(List.of(positionGroup));
 
-        List<PositionGroupSummary> result = positionGroupService.getPositionGroups(companyId, "all");
+        List<PositionGroupSummary> result = positionGroupService.getPositionGroups("all");
 
         assertEquals(1, result.size());
-        assertEquals("Core Staff", result.get(0).name());
-        assertEquals(1, result.get(0).positions().size());
-        assertEquals("Server", result.get(0).positions().get(0).description());
+        assertEquals("Front of House", result.getFirst().name());
     }
 
     @Test
-    void createPositionGroup_ResolvesAndSaves() {
-        CreatePositionGroupRequest request = new CreatePositionGroupRequest(
-                companyId,
-                "Front of House",
-                Arrays.asList(101, 102)
-        );
+    void getPositionGroupById_returnsMappedGroup() {
+        when(positionGroupRepository.findByGroupIdAndCompanyIdAndIsDeletedFalse(201, 1)).thenReturn(Optional.of(positionGroup));
 
-        Position server = new Position();
-        server.setPositionId(101);
-        server.setDescription("Server");
+        Optional<PositionGroupSummary> result = positionGroupService.getPositionGroupById(201);
 
+        assertTrue(result.isPresent());
+        assertEquals("Front of House", result.get().name());
+    }
+
+    @Test
+    void createPositionGroup_savesResolvedPositions() {
         Position bartender = new Position();
         bartender.setPositionId(102);
+        bartender.setCompanyId(1);
         bartender.setDescription("Bartender");
 
-        when(positionRepository.findByPositionIdInAndCompanyId(anySet(), eq(companyId)))
-                .thenReturn(Arrays.asList(server, bartender));
+        when(positionRepository.findByPositionIdInAndCompanyId(any(), eq(1))).thenReturn(List.of(position, bartender));
 
-        positionGroupService.createPositionGroup(request);
+        positionGroupService.createPositionGroup("Front of House", List.of(102, 101));
 
-        ArgumentCaptor<PositionGroup> groupCaptor = ArgumentCaptor.forClass(PositionGroup.class);
-        verify(positionGroupRepository).save(groupCaptor.capture());
-
-        PositionGroup savedGroup = groupCaptor.getValue();
-        assertEquals("Front of House", savedGroup.getDescription());
-        assertEquals(2, savedGroup.getPositions().size());
-        // Verify order is preserved from request
-        assertEquals(101, savedGroup.getPositions().get(0).getPositionId());
-        assertEquals(102, savedGroup.getPositions().get(1).getPositionId());
+        ArgumentCaptor<PositionGroup> captor = ArgumentCaptor.forClass(PositionGroup.class);
+        verify(positionGroupRepository).save(captor.capture());
+        assertEquals("Front of House", captor.getValue().getDescription());
+        assertEquals(102, captor.getValue().getPositions().get(0).getPositionId());
+        assertEquals(101, captor.getValue().getPositions().get(1).getPositionId());
     }
 
     @Test
-    void createPositionGroup_InvalidPositionId_ThrowsException() {
-        CreatePositionGroupRequest request = new CreatePositionGroupRequest(
-                companyId,
-                "Invalid Group",
-                Collections.singletonList(999)
+    void createPositionGroup_missingPosition_throwsBadRequest() {
+        when(positionRepository.findByPositionIdInAndCompanyId(any(), eq(1))).thenReturn(List.of(position));
+
+        ResponseStatusException exception = assertThrows(
+                ResponseStatusException.class,
+                () -> positionGroupService.createPositionGroup("Front of House", List.of(101, 999))
         );
 
-        when(positionRepository.findByPositionIdInAndCompanyId(anySet(), eq(companyId)))
-                .thenReturn(Collections.emptyList());
-
-        assertThrows(ResponseStatusException.class, () -> positionGroupService.createPositionGroup(request));
+        assertEquals(HttpStatus.BAD_REQUEST, exception.getStatusCode());
+        verify(positionGroupRepository, never()).save(any(PositionGroup.class));
     }
 
     @Test
-    void updatePositionGroup_UpdatesPositionsAndDescription() {
-        UpdatePositionGroupRequest request = new UpdatePositionGroupRequest(
-                "Updated Group",
-                Arrays.asList(102, 101)
-        );
-
-        Position server = new Position();
-        server.setPositionId(101);
-        server.setDescription("Server");
-
+    void updatePositionGroup_updatesDescriptionAndMembership() {
         Position bartender = new Position();
         bartender.setPositionId(102);
+        bartender.setCompanyId(1);
         bartender.setDescription("Bartender");
 
-        when(positionGroupRepository.findByGroupIdAndCompanyIdAndIsDeletedFalse(1, companyId))
-                .thenReturn(Optional.of(group));
-        when(positionRepository.findByPositionIdInAndCompanyId(anySet(), eq(companyId)))
-                .thenReturn(Arrays.asList(server, bartender));
+        when(positionGroupRepository.findByGroupIdAndCompanyIdAndIsDeletedFalse(201, 1)).thenReturn(Optional.of(positionGroup));
+        when(positionRepository.findByPositionIdInAndCompanyId(any(), eq(1))).thenReturn(List.of(position, bartender));
 
-        positionGroupService.updatePositionGroup(1, companyId, request);
+        positionGroupService.updatePositionGroup(201, new UpdatePositionGroupRequest("Updated Group", List.of(102, 101)));
 
-        verify(positionGroupRepository).save(group);
-        assertEquals("Updated Group", group.getDescription());
-        assertEquals(2, group.getPositions().size());
-        assertEquals(102, group.getPositions().get(0).getPositionId());
-        assertEquals(101, group.getPositions().get(1).getPositionId());
+        assertEquals("Updated Group", positionGroup.getDescription());
+        assertEquals(102, positionGroup.getPositions().get(0).getPositionId());
+        verify(positionGroupRepository).save(positionGroup);
     }
 
     @Test
-    void deletePositionGroup_SetsDeletedFlag() {
-        when(positionGroupRepository.findByGroupIdAndCompanyIdAndIsDeletedFalse(1, companyId))
-                .thenReturn(Optional.of(group));
+    void deletePositionGroup_setsDeletedFlag() {
+        when(positionGroupRepository.findByGroupIdAndCompanyIdAndIsDeletedFalse(201, 1)).thenReturn(Optional.of(positionGroup));
 
-        positionGroupService.deletePositionGroup(1, companyId);
+        positionGroupService.deletePositionGroup(201);
 
-        assertTrue(group.getIsDeleted());
-        verify(positionGroupRepository).save(group);
+        assertTrue(positionGroup.getIsDeleted());
+        verify(positionGroupRepository).save(positionGroup);
+    }
+
+    @Test
+    void createPositionGroup_withoutTenant_throwsUnauthorized() {
+        TenantContext.clear();
+
+        ResponseStatusException exception = assertThrows(
+                ResponseStatusException.class,
+                () -> positionGroupService.createPositionGroup("Front of House", List.of(101))
+        );
+
+        assertEquals(HttpStatus.UNAUTHORIZED, exception.getStatusCode());
+        verify(positionGroupRepository, never()).save(any(PositionGroup.class));
     }
 }
